--- a/model-endpoint/API-INFO.org
+++ b/model-endpoint/API-INFO.org
@@ -7,7 +7,7 @@ pip install -r requirements.txt
 #+end_src
 To run it, simply do:
 #+begin_src bash 
-uvicorn main:app --reload 
+uvicorn main:app --reload --port:8086
 #+end_src 
 
 * Sign Recognition Endpoint
